[package]
name = "luts"
version = "0.1.0"
description = "Address Lookup Table wrapper with deduplication and readiness tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "luts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
test-sbf = []

[dependencies]
anchor-lang = "0.32.1"
solana-address-lookup-table-interface = { version = "2.1", features = ["bincode", "bytemuck"] }
solana-sdk-ids = "2.2"

[dev-dependencies]
mollusk-svm = { version = "0.9", features = ["inner-instructions", "all-builtins"] }
mollusk-svm-programs-token = { version = "0.9" }
solana-pubkey = "4.0"
solana-address = "2.0"
solana-instruction = "3.1"
solana-account = "3.3"
solana-account-info = "3.1"
solana-program-error = "3.0"
solana-cpi = "3.1"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-hash = "3.1"
solana-system-interface = { version = "3.0", features = ["bincode"] }
borsh = "1.5"
anyhow = "1.0"
bincode = "1.3"
mollusk-helper = "0.1.1"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
