[package]
name = "luts"
version = "0.1.1"
description = "Address Lookup Table wrapper with deduplication and readiness tracking"
edition = "2021"
repository = "https://github.com/turbine-cash/luts"
keywords = ["solana", "anchor", "address-lookup-table"]
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/luts"

[lib]
crate-type = ["cdylib", "lib"]
name = "luts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
test-sbf = []
fetch = []

[dependencies]
anchor-lang = "0.32.1"
solana-address-lookup-table-interface = { version = "2.1", features = ["bincode", "bytemuck"] }
solana-sdk-ids = "2.2"

[dev-dependencies]
solana-pubkey = "4.0"
solana-instruction = "3.1"
solana-account = "3.3"
solana-account-info = "3.1"
solana-program-error = "3.0"
solana-cpi = "3.1"
borsh = "1.5"
mollusk-helper = "0.1.1"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
